# mcom03-baremetal-tools

./: .clang-format  .codespell.ignore  .gitignore  .pre-commit-config.yaml  .zuul.yaml  CMakeLists.txt  LICENSE  README.rst
arm-hang-test/: CMakeLists.txt  link.ld  main.c  startup.S
arm-hang-test-monitor/: CMakeLists.txt  ahtm-run.mdb  link.ld  link.ld.in  main.c  startup.S
common/: clk.c  clk.h  console.c  console.h  cpu.c  cpu.h  delay.c  delay.h  gpio.h  i2c.c  i2c.h  pvt.c  pvt.h  qspi.c  qspi.h  regs.h  start-aarch64.S  start-mips.S  uart.c  uart.h  wdt.c  wdt.h
hello-world/: CMakeLists.txt  link.ld.in  main.c
otp-flasher/: CMakeLists.txt  main.c  otp.c  otp.h  snps_ssi.c  snps_ssi.h  ssi0_dw_apb_ssi_reg_fields.h
pvt-demo/: CMakeLists.txt  link.ld.in  main.c
soak-test/: CMakeLists.txt  main.c
spi-flasher/: CMakeLists.txt  link.ld.in  main.c
